# cenor-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.py  main.py  pyproject.toml  pyrightconfig.json  pytest.ini
.github/: pull_request_template.md
.github/workflows/: ci.yaml
ai/: protocol.py  service.py  setup.py
ai/prompts/: cv_structurer.py  feedback_synthesizer.py  github_structurer.py  interviewer.py  observer.py  strictness_rubric.py  trait_mapping.py
api/v1/: router.py
app/: exception_handlers.py  main.py
auth/: domain.py  errors.py  models.py  repository.py  routes.py  service.py
candidate_profile/: completeness.py  domain.py  errors.py  extraction.py  github_computation.py  github_fetch.py  models.py  repository.py  routes.py  schemas.py  service.py  summary.py
common/: errors.py  logger.py  middleware.py  rate_limit.py  retry.py  sanitize.py  schemas.py
common/display/: session.py
db/: session.py
feedback/: domain.py  errors.py  models.py  repository.py  routes.py  schemas.py  service.py
job_posting/: domain.py  errors.py  models.py  repository.py  routes.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 45450e2c7b82_added_feedback_table.py  4d6f8f63256e_initial_schema.py  (+1 more)
observation/: domain.py  errors.py  models.py  repository.py  routes.py  schemas.py  service.py
session/: dependencies.py  domain.py  errors.py  lens.py  models.py  repository.py  routes.py  schemas.py  service.py  session_setup.py  tasks.py  transcript.py
tests/: conftest.py
web/: routes.py  templating.py
(+55 files in other folders)
