    [project]
    name = "cenor-ai"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    requires-python = ">=3.13"
    dependencies = [
        "alembic>=1.18.5",
        "fastapi[standard]>=0.139.0",
        "openai>=2.45.0",
        "sqlalchemy>=2.0.51",
]

    [dependency-groups]
    dev = [
        "pytest>=9.1.1",
        "pytest-asyncio>=1.4.0",
        "ruff>=0.15.21",
    ]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "migrations",
    "__pycache__",
    "tests",
]
